Revision history for Perl extension Text-Markup.

0.25
    - Fixed the importation of Pod::Simple::XHTML and Text::Trac to use the
      correct syntax for requiring a minimum version. Thanks to Graham Knop
      for the PR (#27)!

0.24  2019-12-12T00:53:25Z
     - Added missing `<head>` tag to all output. Thanks to Axel Beckert for
       the pull request (#16, #18)!
     - Added the `format_matchers` class method, which returns a list of
       formats and the regular expressions that match them.
     - Added `use warnings;` to all modules, thanks to a patch from John SJ
       Anderson (#22).
     - Added support for a `--raw` option to the markup modules for which it
       makes sense. This option allows markup to be output without wrapping it
       in a minimal HTML skeleton. Thanks to John SJ Anderson for the patch
       (#2, #24)!
     - Ported reST to Python 3. Thanks to gregor herrmann for the PR (#26).

0.23  2015-05-21T06:23:35Z
     - Added BBcode and Creole to the module description.
     - Fixed a failing test for the Mediawiki format due to a change in CGI
       v4.14. This reverses the workaround required by CGI 4.11, introduced in
       v0.20. Not that you care. It's just a test change.
     - Updated the Pod parser to determine the indentation of verbatim blocks
       by the line with the shortest leading whitespace, rather than the
       whitespace of just the first line. Inspired by an equivalent approach
       in Mojolicious by Joel Berger.

0.22  2015-02-20T03:52:36Z
     - Added support for Creole. Thanks to Lucas Kanashiro for the patch!

0.21  2015-02-17T00:18:20Z
     - Fixed description of Asciidoc and added it to the README.
     - Added support for BBcode. Thanks to Lucas Kanashiro for the patch!

0.20   2015-01-22T00:54:50Z
     - Fixed a failing test for the Mediawiki format due to a change in CGI
       v4.11. Thanks to Andreas Koenig for the report and diagnosis.

0.19  2014-02-07T04:00:56Z