@@ -4,6 +4,7 @@ Revision history for Perl extension Text-Markup.
     - Fixed the importation of Pod::Simple::XHTML and Text::Trac to use the
       correct syntax for requiring a minimum version. Thanks to Graham Knop
       for the PR (#27)!
+    - Fixed a test reStructuredText failure on newer versions of docutils.
 
 0.24  2019-12-12T00:53:25Z
      - Added missing `<head>` tag to all output. Thanks to Axel Beckert for
